--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,65 @@
 body {
-  background: #F177B8
+   background: #AAAAAA;
 }
 h1 {
-  text-align: center;
+   text-align: center;
+}
+.caixa1 {
+   position: absolute;
+   background: rgb(185, 81, 73);
+   color: #FFFFFF;
+   width: 200px;
+   height: 200px;
+   right: 0;
+   bottom: 0;
+}
+.caixa2 {
+   position: absolute;
+   background: rgb(255, 0, 157);
+   color: #FFFFFF;
+   width: 200px;
+   height: 200px;
+   right: 205px;
+   bottom: 0;
+}
+.caixa3 {
+   position: absolute;
+   background: rgb(0, 195, 255);
+   color: #000000;
+   width: 200px;
+   height: 200px;
+   right: 0;
+   bottom: 205px;
+}
+
+.menuPrincipal {
+   position: relative;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 45px;
+   background: rgb(57, 90, 143);
+   font-family: 'Courier New', Courier, monospace;
+}
+
+nav ul {
+   list-style: none ;
+   margin: 0;
+   padding: 0%;
+   overflow: 0%;
+}
+li {
+   float: left;
+}
+li a {
+   display: block;
+   color: aquamarine;
+   text-align:center;
+   padding: 14px 16px;
+   text-decoration: black;
+   font-family: 'Courier New', Courier, monospace;
+}
+li  a:hover {
+   background: purple;
+   color: black;
 }
