--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,7 @@ h1 {
 }
 .caixa1 {
    position: absolute;
-   background: rgb(185, 81, 73);
+   background: rgb(128, 0, 49);
    color: #FFFFFF;
    width: 200px;
    height: 200px;
@@ -15,7 +15,7 @@ h1 {
 }
 .caixa2 {
    position: absolute;
-   background: rgb(255, 0, 157);
+   background: red;
    color: #FFFFFF;
    width: 200px;
    height: 200px;
@@ -24,7 +24,7 @@ h1 {
 }
 .caixa3 {
    position: absolute;
-   background: rgb(0, 195, 255);
+   background: rgb(255, 0, 85);
    color: #000000;
    width: 200px;
    height: 200px;
@@ -33,7 +33,7 @@ h1 {
 }
 
 .menuPrincipal {
-   position: relative;
+   position: absolute;
    top: 0;
    left: 0;
    width: 100%;
@@ -43,23 +43,41 @@ h1 {
 }
 
 nav ul {
-   list-style: none ;
-   margin: 0;
-   padding: 0%;
-   overflow: 0%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: 0;
 }
 li {
    float: left;
 }
 li a {
    display: block;
-   color: aquamarine;
-   text-align:center;
+   color: rgb(109, 1, 15);
+   text-align: center;
    padding: 14px 16px;
-   text-decoration: black;
+   text-decoration: none;
    font-family: 'Courier New', Courier, monospace;
 }
-li  a:hover {
-   background: purple;
+li a:hover {
+   background: rgb(209, 193, 163);
    color: black;
+}
+#morango {
+   width: 15% ;
+}
+.caixastrawberry{
+   position: absolute;
+   top: 45px;
+   left: 0%;
+   width: 90%;
+   height: 140px;
+   background: pink;
+   margin: 20px;
+   border-color: darkred;
+   border-width: 20px;
+   border-style: solid;
+   padding: 20px;
+   display: flex;
+   justify-content: center;
 }
