--- a/estilo.css
+++ b/estilo.css
@@ -1,12 +1,14 @@
 body {
    background: #AAAAAA;
+   margin: 0;
+   padding: 0;
 }
 h1 {
    text-align: center;
 }
 .caixa1 {
    position: absolute;
-   background: rgb(128, 0, 49);
+   background: green;
    color: #FFFFFF;
    width: 200px;
    height: 200px;
@@ -24,7 +26,7 @@ h1 {
 }
 .caixa3 {
    position: absolute;
-   background: rgb(255, 0, 85);
+   background: yellow;
    color: #000000;
    width: 200px;
    height: 200px;
@@ -53,7 +55,7 @@ li {
 }
 li a {
    display: block;
-   color: rgb(109, 1, 15);
+   color: yellow;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
@@ -63,21 +65,37 @@ li a:hover {
    background: rgb(209, 193, 163);
    color: black;
 }
-#morango {
-   width: 15% ;
+#carro {
+    width: 15%;
 }
-.caixastrawberry{
+.caixaCarro {
    position: absolute;
    top: 45px;
-   left: 0%;
+   left: 0;
    width: 90%;
    height: 140px;
-   background: pink;
+   background: #4e8b31;
    margin: 20px;
-   border-color: darkred;
+   border-color: red;
    border-width: 20px;
    border-style: solid;
    padding: 20px;
    display: flex;
    justify-content: center;
+}
+.rodape {
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   left: 0;
+   height: 20px;
+   background: rgb(128, 0, 64);
+   color: paleturquoise;
+   display: flex;
+   justify-content: center;
+   font-size: medium;
+}
+.conteudo{
+   position: absolute;
+   top: 45%;
 }
